--- a/index.html
+++ b/index.html
@@ -16,9 +16,49 @@
         </div>
     </header>
     <main>
-        <section>
-
+        <section id="parte1" style=" width: 1000px; height: 400px; margin: auto;">
+            <div id="txt1" style="width: 450px; height: 400px; float: right;">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet enim corporis, incidunt nobis magni facere, molestias iusto blanditiis ab aut odio dignissimos. Asperiores incidunt culpa qui. Architecto ullam ratione atque.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime magnam dolore exercitationem ad, modi, fugit commodi maiores enim nemo, voluptatibus obcaecati neque nisi ut quia recusandae. Hic, excepturi! Fugit, nostrum.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad alias maxime animi atque nam incidunt tenetur dolorum odio, dicta voluptate vero in nisi quos voluptatibus ut dolor aut recusandae deleniti.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, dolorem, laboriosam hic officiis ducimus non sequi nesciunt, nisi atque cupiditate voluptatum! Obcaecati animi placeat dolore fugiat deserunt a explicabo nemo!</p>
+            </div>
+            <div id="img1" style="width: 500px; height: 400px;">
+                <img src="/IMAGENS/ovopascoa_05.png" alt="ovos de pascoa recheado" style="width: 500px; height: 400px;">
+            </div>
         </section>
+
+        <br/><br/>
+
+        <section id="parte2" style=" width: 1000px; height: 600px; margin: auto;">
+            <div id="img2" style="width: 400px; height: 320px; margin: auto;">
+                <img src="/IMAGENS/simbolo_03.png" alt="simbolo da marca" style="width: 350px; height: 320px; margin: auto;">
+            </div>
+            <br/>
+            <div id="txt2" style="width: 500px; height: 200px; margin: auto;">
+                <h2>Missão</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, eius cum consequuntur quasi facilis officia voluptates accusantium totam quidem. Exercitationem minus sequi ipsum officia eum alias illo esse explicabo ab!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis ipsam alias illo quam laboriosam placeat voluptates accusantium officia. Velit beatae iste sit consequuntur quas. Rem inventore possimus provident similique perferendis?</p>
+            </div>
+        </section>
+
+        <br/><br/>
+
+        <section id="parte3" style="background-color: brown; width: 1000px; height: 550px; margin: auto;">
+            <div id="img5" style="background-color: aqua; width: 250px; height: 230px; float: left;">
+            </div>
+            <div id="img4" style="background-color:blue; width: 250px; height: 230px; float: right;">
+            </div>
+            <div id="img3" style="background-color: blanchedalmond; width: 250px; height: 230px; margin: auto;">
+            </div>
+            <br/>
+            <div id="txt3" style="background-color: chocolate; width: 400px; height: 130px; margin: auto;">
+            </div>
+            <br/>
+            <div id="titulo" style="background-color: beige; width: 800px; height: 150px; margin: auto;">
+            </div>
+        </section>
+
     </main>
     <footer>
 
