alteracao caminho imagem

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <a href="#">Contato</a> |
         </nav>
         <div id="logo" style=" width: 330px; height: 100px;">
-            <img src="/IMAGENS/logomarca_principal.png" alt="logo" style="width: 330px; height: 100px;">
+            <img src="./IMAGENS/logomarca_principal.png" alt="logo" style="width: 330px; height: 100px;">
         </div>
     </header>
     <main>
@@ -24,7 +24,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, dolorem, laboriosam hic officiis ducimus non sequi nesciunt, nisi atque cupiditate voluptatum! Obcaecati animi placeat dolore fugiat deserunt a explicabo nemo!</p>
             </div>
             <div id="img1" style="width: 500px; height: 400px;">
-                <img src="/IMAGENS/ovopascoa_05.png" alt="ovos de pascoa recheado" style="width: 500px; height: 400px;">
+                <img src="./IMAGENS/ovopascoa_05.png" alt="ovos de pascoa recheado" style="width: 500px; height: 400px;">
             </div>
         </section>
 
@@ -32,7 +32,7 @@
 
         <section id="parte2" style=" width: 1000px; height: 600px; margin: auto;">
             <div id="img2" style="width: 400px; height: 320px; margin: auto;">
-                <img src="/IMAGENS/simbolo_03.png" alt="simbolo da marca" style="width: 350px; height: 320px; margin: auto;">
+                <img src="./IMAGENS/simbolo_03.png" alt="simbolo da marca" style="width: 350px; height: 320px; margin: auto;">
             </div>
             <br/>
             <div id="txt2" style="width: 500px; height: 200px; margin: auto;">
@@ -46,8 +46,10 @@
 
         <section id="parte3" style="background-color: brown; width: 1000px; height: 550px; margin: auto;">
             <div id="img5" style="background-color: aqua; width: 250px; height: 230px; float: left;">
+                <img src="./IMAGENS/ovopascoa_03.png"
             </div>
             <div id="img4" style="background-color:blue; width: 250px; height: 230px; float: right;">
+                <img src="./IMAGENS/ovopascoa_02.png"
             </div>
             <div id="img3" style="background-color: blanchedalmond; width: 250px; height: 230px; margin: auto;">
             </div>
