--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 
         <section id="parte3" style="background-color: brown; width: 1000px; height: 550px; margin: auto;">
             <div id="img5" style="background-color: aqua; width: 250px; height: 230px; float: left;">
-                <img src="./IMAGENS/ovopascoa_03.png"
+                <img src="./IMAGENS/ovopascoa_03.png" style="width: 250px; height: 230px; float: left;">
             </div>
             <div id="img4" style="background-color:blue; width: 250px; height: 230px; float: right;">
-                <img src="./IMAGENS/ovopascoa_02.png"
+                <img src="./IMAGENS/ovopascoa_02.png" style=" 250px; height: 230px; float: right;">
             </div>
             <div id="img3" style="background-color: blanchedalmond; width: 250px; height: 230px; margin: auto;">
             </div>
